[package]
name = "sound-of-room"
version = "0.1.0"
edition = "2021"
description = "Generating the sound of a room"
readme = "README.md"
repository = "https://github.com/MakeNEnjoy/sound-of-room"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
yew = { version="0.20", features=["csr"] }
