[package]
name = "sound-of-room"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
cpal = { version = "0.15.2", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["console"] }
wee_alloc = { version = "0.4.5", optional = true }

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.7"